
* Hook tag allows calling registered hooks.

    Hooks can be registered that take env, template, line, renderer, scope,
    and params.  Tags {% hook ... ; with ... %} and {% rhook ... ; with ... %}
    can then be used to call the hooks.  The call just returns if the hook
    doesn't exist. Hooks may be used to generate output directly with renderer,
    include other templates via env, template.render_nested, set variables in
    the scope, etc.

* Userdata can be passed to a template during render.

    Userdata passed can then be passed on to hooks and in the future special
    functions. These hooks and functions can then access the userdata.

* Support for dictionarys in the template.

    Dictionary syntax borrows from list syntax: [key:value, key:value, ...]
    An empty dictionary can be created as [:]

* Support for iteration or increment loops.

    An iteration loop has the same syntax:

        {% foreach var in items %} or {% foreach var,pos in items %}

    An increment loop takes three segments, init, test, and incr.  The
    init and incr are multi-assign expressions segments while test is
    an expression:

        {% for i = 0, j = 0 ; i < 10 ; i = i + 1 %}

    In all othere ways they are the same, ending with {% endfor %}.  The
    {% else %} tag behaves the same, being rendered only if the loop didn't
    have any iterations.

* Support for an abort function.

    A call to Template.render can now pass an abort function which gets called
    at the start of each node list's render.  If the abort function returns
    True, then an AbortError will be raised.

Removed
-------

 * Code sections have been removed.

    Applications using the template library can provide other ways for user
    supplied code to be executed if desired.  This removed is intended to
    simplify certain aspects of the library to prepare for other changes
    later.

 * Break and continue have been removed.