@@ -1,19 +1,3 @@
 {% autostrip %}
 {% import std="mrbaviirc.template" %}
-
-{{ std.defined(x.y[12]("hello")) +}}
-
-{% set x=1, y=10 +%}
-{{ std.defined(x.y) +}}
-{{ std.defined(x) +}}
-{{ std.defined(y) +}}
-
-{% unset x +%}
-{{ std.defined(x.y) +}}
-{{ std.defined(x) +}}
-{{ std.defined(y) +}}
-
 {# +#}
-{{ std.default(x.y, 27) +}}
-{{ std.default(x, 14) +}}
-{{ std.default(y, 91) +}}
