@@ -1,13 +1,1 @@
-False
 
-False
-True
-True
-
-False
-False
-True
-
-27
-14
-10
