@@ -1,5 +1,4 @@
 {% autostrip %}
-{% import lib="mrbaviirc.template" %}
 
 {{ x +}}
 {{ y +}}
@@ -9,7 +8,9 @@
 {{ x +}}
 {{ y +}}
 
-{{ lib.default(_px, "nothing") +}}
-{{ lib.default(p@py, "nothing2") +}}
+{% set _d1 = _px ; else _d1 = "nothing" %}
+{% set _d2 = p@py ; else _d2 = "nothing2" %}
+{{ _d1 +}}
+{{ _d2 +}}
 
 {% set _global_ = 27 %} 
